Added and updated many features, added backend and connected to sql database

--- a/server/config.env
+++ b/server/config.env
@@ -1,3 +1,9 @@
-MONGODB_URI=mongodb+srv://HEMAMALINI_S:HEMAMALINI_S@cluster0.a0h9b.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-PORT=5000 
+PORT=5000
+
+# MySQL configuration (required)
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=catering_db
+DB_USER=root
+DB_PASSWORD=hemamalini25
