--- a/server/package.json
+++ b/server/package.json
@@ -3,21 +3,28 @@
   "version": "1.0.0",
   "description": "Backend for Catering Marketplace",
   "main": "server.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "express-validator": "^7.0.1"
+    "mongoose": "^7.5.0",
+    "multer": "^2.0.2",
+    "mysql2": "^3.14.5",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
-} 
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
+}
